[build-system]
requires = ["setuptools>=82.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "wpt-gen"
version = "0.2.0"
description = "A CLI Tool for AI-Powered Web Platform Test Generation"
readme = "README.md"
requires-python = ">=3.10"
license = "Apache-2.0"
authors = [
    {name = "Google LLC"}
]
keywords = ["web-platform-tests", "wpt", "ai", "llm", "testing", "automation"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Testing",
]
dependencies = [
    # Core LLM Integration
    "google-adk>=1.27.2",
    "google-genai>=1.62.0",
    "openai>=2.20.0",
    "anthropic>=0.84.0",
    "tiktoken>=0.12.0",

    # Context & Scraping
    "beautifulsoup4>=4.12.0",
    "lxml>=5.2.0",
    "markdownify>=0.14.0",

    # Prompt Templating
    "jinja2>=3.1.6",

    # CLI Infrastructure
    "typer>=0.23.0",
    "rich>=14.3.2",
    "pyyaml>=6.0.3",
]

[project.urls]
Homepage = "https://github.com/GoogleChromeLabs/wpt-gen"
Repository = "https://github.com/GoogleChromeLabs/wpt-gen"
Issues = "https://github.com/GoogleChromeLabs/wpt-gen/issues"

[project.optional-dependencies]
dev = [
    "pytest>=9.0.2",
    "pytest-mock>=3.15.1",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.0",
    "ruff>=0.15.0",
    "mypy>=1.19.1",
    "types-PyYAML>=6.0.12.20250915",
    "build>=1.4.0",
    "twine>=6.2.0",
]

[project.scripts]
wpt-gen = "wptgen.main:app"

[tool.setuptools.packages.find]
include = ["wptgen*"]

[tool.setuptools.package-data]
wptgen = [
    "templates/*.jinja",
    "templates/*.xml",
    "templates/*.txt",
    "skills/wpt-generator/**/*"
]

[tool.ruff]
target-version = "py310"
line-length = 100
indent-width = 2

[tool.ruff.format]
quote-style = "single"

[tool.ruff.lint]
# Enable a wide set of rules for strict linting
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "UP",   # pyupgrade
    "PT",   # flake8-pytest-style
]
ignore = [
    "E501", # Line too long
]

[tool.ruff.lint.isort]
known-first-party = ["wptgen"]

[tool.mypy]
python_version = "3.10"
strict = true

[tool.pytest.ini_options]
addopts = "--cov=wptgen --cov-report=term-missing --cov-fail-under=80"
filterwarnings = [
    "ignore::UserWarning:google.adk.features._feature_decorator",
    "ignore:\\[EXPERIMENTAL\\] feature FeatureName\\.SKILL_TOOLSET is enabled:UserWarning",
    "ignore::FutureWarning:google.api_core.*",
]
